[gd_scene load_steps=2 format=3 uid="uid://cj4lsgm75ti6d"]

[ext_resource type="Script" path="res://ui.gd" id="1_kmpvd"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kmpvd")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 142.0
offset_bottom = 73.0
color = Color(0.113725, 0.160784, 0.27451, 0.313726)

[node name="score" type="Label" parent="."]
layout_mode = 1
offset_right = 116.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "1"

[node name="DW" type="Button" parent="."]
layout_mode = 1
offset_left = 39.0
offset_top = 478.0
offset_right = 119.0
offset_bottom = 570.0
theme_override_font_sizes/font_size = 30
text = "GUN"

[node name="tag" type="Label" parent="DW"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 96.0
offset_right = 38.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "10
"
horizontal_alignment = 1

[node name="DW2" type="Button" parent="."]
layout_mode = 1
offset_left = 130.0
offset_top = 479.0
offset_right = 262.0
offset_bottom = 571.0
theme_override_font_sizes/font_size = 30
text = "Machine
GUN
"

[node name="tag" type="Label" parent="DW2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 96.0
offset_right = 38.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "200
"
horizontal_alignment = 1

[node name="UP2" type="Button" parent="."]
layout_mode = 1
offset_left = 982.0
offset_top = 486.0
offset_right = 1115.0
offset_bottom = 578.0
theme_override_font_sizes/font_size = 30
text = "blower
machine"

[node name="tag" type="Label" parent="UP2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 96.0
offset_right = 38.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "70"
horizontal_alignment = 1

[node name="UP" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 811.0
offset_top = 447.0
offset_right = 920.0
offset_bottom = 539.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Blower"

[node name="tag" type="Label" parent="UP"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 96.0
offset_right = 38.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "30"
horizontal_alignment = 1

[connection signal="button_down" from="DW" to="." method="_on_dw_button_down"]
[connection signal="button_down" from="DW2" to="." method="_on_dw_2_button_down"]
[connection signal="button_down" from="UP2" to="." method="_on_up_2_button_down"]
[connection signal="button_down" from="UP" to="." method="_on_up_button_down"]
